mapserver/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bockmaps-backend
  namespace: bock
  labels:
    app: bockmaps-mapserver
spec:
  type: ClusterIP
  selector:
    app: bockmaps-mapserver
  ports:
    - name: http
      port: 80
      targetPort: 3001
      protocol: TCP
