mapserver/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bockmaps-mapserver-ingress
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /api/bockmaps
            pathType: Prefix
            backend:
              service:
                name: bockmaps-mapserver-svc
                port:
                  number: 3001
